--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-node_modules
-dist/
-build/
+# Node modules
+node_modules/
+
+# Build output
+/dist
+/build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
