--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.js",
-      "use": "@vercel/node"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "server/index.js"
+      "src": "^/api/(.*)$",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "^(?:.*)$",
+      "dest": "/dist/index.html"
     }
   ]
 }
